--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,16 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Arquivos gerados pelo Tailwind CSS
+/build/
+/public/assets/css/*
+
+# Arquivos de configuração do Tailwind CSS
+tailwind.config.js
+
+# Dependências do npm ou Yarn
+node_modules/
+
+# Arquivos de construção ou cache de Tailwind CSS
+.cache/
