--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,18 @@ node_modules/
 
 # Arquivos de construção ou cache de Tailwind CSS
 .cache/
+
+# Arquivos de ambiente
+.env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Arquivos do sistema
+.DS_Store
+Thumbs.db
